--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    
+    <header>Weather Dashboard</header>
 
+    
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="./script.js"></script>
 </body>
 </html>
