--- a/index.html
+++ b/index.html
@@ -8,9 +8,17 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <header>Weather Dashboard</header>
-
+    <header>
+        <h1>Weather Dashboard</h1>
+    </header>
+    <div id="city-weather"></div>
     
+
+
+    <script
+    type="text/javascript"
+    src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.27.0/moment.min.js"
+  ></script>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="./script.js"></script>
 </body>
