Created fiveDayForecastApiCall function. Currently it parses through promise and renders the date for the next 5 days

--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
     </header>
     <div id="city-weather"></div>
     
+    <div id="five-day-forecast">
+        <div class="card"></div>
+
+    </div>
 
 
     <script
