Finished the fiveDayForecastApiCall function

--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
     <header>
         <h1>Weather Dashboard</h1>
     </header>
+
+    <div class="city-input-field" >
+        <label for="city-search">Enter City:</label>
+        <input type="search" id="city-search" name="q">
+        <button id="search">Search</button>
+    </div>
+
     <div id="city-weather"></div>
     
     <div id="five-day-forecast">
