--- a/index.html
+++ b/index.html
@@ -14,8 +14,12 @@
 
     <div class="city-input-field" >
         <label for="city-search">Enter City:</label>
-        <input type="search" id="city-search" name="q">
-        <button id="search">Search</button>
+        <input type="text" id="city-search" name="q" placeholder="city here">
+        <button id="search-btn">Search</button>
+    </div>
+    <div class="state-input-field" >
+        <label for="state-search">Enter State:</label>
+        <input type="text" id="state-search" name="q" placeholder="state here">
     </div>
 
     <div id="city-weather"></div>
