Attempted to move checkErrorAndRenderSaved to stop duplicate button error

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </div>
     <div class="state-input-field" >
         <label for="state-search">Enter State:</label>
-        <input list="state-options" id="state-search" name="q" placeholder="Pick State">
+        <input list="state-options" id="state-search" name="q" maxlength="2" placeholder="Pick State">
     </div>
     <datalist id="state-options"></datalist>
 
